--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^7.2.15",
     "@angular/service-worker": "^7.2.15",
     "@ionic-native/core": "^5.8.0",
+    "@ionic-native/in-app-browser": "^5.10.0",
     "@ionic-native/network": "^5.0.0",
     "@ionic-native/splash-screen": "^5.8.0",
     "@ionic-native/status-bar": "^5.8.0",
